--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,16 +67,8 @@ flutter:
   assets:
     - assets/images/
     - assets/translation/
-#
-#  fonts:
-#    - family: Montserrat
-#      fonts:
-#        - asset: assets/fonts/Montserrat-Regular.ttf
-#        - asset: assets/fonts/Montserrat-Italic.ttf
-#          style: italic
-#    - family: Montserrat
-#      fonts:
-#        - asset: assets/fonts/Montserrat-Regular.ttf
-#        - asset: assets/fonts/Montserrat-SemiBold.ttf
-#          weight: 700
-#
+
+  fonts:
+    - family: Helvetica
+      fonts:
+        - asset: assets/fonts/HelveticaNeueLt.ttf
