--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^6.0.2
   uuid: ^3.0.5
   get_storage: ^2.0.3
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
